@@ -5,6 +5,12 @@
 TODO: Get sawfish's iconize animation to go into the middle of the screen
       so people stop blaming us for hiding the icons under the panel...
 
+      Limit amount of text stored in message log.
+
+19-Jun-2002
+~~~~~~~~~~~
+Added message window so you can see errors after the popup has hidden itself.
+
 11-Jun-2002
 ~~~~~~~~~~~
 Require version 2.0.1 or later of Gtk, due to bugs in 2.0.0.
